test/libsolidity/syntaxTests/parsing/fixed_literal_with_double_radix.sol
contract A {
	fixed40x40 pi = 3.14.15;
}
// ----
// ParserError: (34-34): Expected token Semicolon got 'Number'
